--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>MyGate Clone</title>
+    <title>MyGate NB Opal</title>
     <meta name="description" content="A community management application" />
     <meta name="theme-color" content="#2563eb" />
     <meta name="mobile-web-app-capable" content="yes" />
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
+<!--     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script> -->
     <script src="/src/main.tsx" type="module"></script>
   </body>
 </html>
